<resources>
    <string name="app_name">Food Market</string>
    <string name="food_market">Food Market</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="hint_email_address">Type your email address</string>
    <string name="password">Password</string>
    <string name="type_your_password">Type your password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Order</string>
    <string name="title_notifications">Profie</string>
</resources>