<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="24dp"
    tools:context=".ui.auth.signin.SigninFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/email_address"
        android:textSize="16sp"
        android:textColor="#020202"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        tools:ignore="RtlSymmetry"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:hint="@string/hint_email_address"
        android:fontFamily="@font/poppins"
        android:textColor="#8D92A3"
        android:background="@drawable/ic_shape_bg_hint"
        tools:ignore="RtlSymmetry"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/password"
        android:textSize="16sp"
        android:textColor="#020202"
        android:layout_marginTop="26dp"
        android:layout_marginStart="24dp"
        tools:ignore="RtlSymmetry"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="24dp"
        android:padding="10dp"
        android:layout_marginStart="24dp"
        android:hint="@string/type_your_password"
        android:fontFamily="@font/poppins"
        android:textColor="#8D92A3"
        android:background="@drawable/ic_shape_bg_hint"
        tools:ignore="RtlSymmetry"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/ic_shape_bg_button_primary"
        android:text="@string/sign_in"
        android:fontFamily="@font/poppins_medium"
        android:textColor="#020202" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_shape_bg_button_secondary"
        android:text="@string/create_new_account"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white" />

</LinearLayout>